--- a/bowtie2_samtools/Dockerfile
+++ b/bowtie2_samtools/Dockerfile
@@ -24,6 +24,15 @@ RUN unzip bowtie2-2.3.2-linux-x86_64.zip && \
 #    mkdir /usr/local/bin/ && \
 
 
+RUN wget https://github.com/samtools/samtools/releases/download/1.10/samtools-1.10.tar.bz2 && \
+    tar -jxvf samtools-1.10.tar.bz2 && \
+    cd samtools-1.10 && \
+    ./configure --prefix=/usr/local/bin/ && \
+    make && \
+    make install
+
+
+
 
 #RUN mkdir /genomeData && \
 #    cd /genomeData && \
