signal_tracks deeptols

--- a/macs2/Dockerfile
+++ b/macs2/Dockerfile
@@ -32,5 +32,6 @@ RUN ${PIP} --no-cache-dir install --upgrade \
 RUN ln -s $(which ${PYTHON}) /usr/local/bin/python 
 
 
+# Install macs2
 RUN ${PIP} install macs2
 
