--- a/quality_control/Dockerfile
+++ b/quality_control/Dockerfile
@@ -15,6 +15,14 @@ ENV LANG C.UTF-8
 
 RUN apt-get update && apt-get install -y \
     build-essential \
+    wget \
+    gcc \
+    g++ \
+    libtbb-dev \
+    libncurses5-dev \
+    libncursesw5-dev \
+    zlib1g-dev \
+    libcurl4-openssl-dev \
     libjpeg-dev \
     libbz2-dev \
     liblzma-dev \
@@ -45,6 +53,17 @@ RUN ln -s $(which ${PYTHON}) /usr/local/bin/python
 
 # RUN ${PIP} install tensorflow==2.2.0
 
+
 RUN R -e "install.packages('cowplot')"
+
+
+# Install samtools
+RUN wget https://github.com/samtools/samtools/releases/download/1.10/samtools-1.10.tar.bz2 && \
+    tar -jxvf samtools-1.10.tar.bz2 && \
+    cd samtools-1.10 && \
+    ./configure --prefix=/usr/local/ && \
+    make && \
+    make install
+
 
 
